src/fhiclcpp/fhiclcpp/test/testFiles/pass/adv_ref3_pass.fcl
BEGIN_PROLOG
a: 5
tab1:{ a:1 b:2 }
END_PROLOG
a :6
t: @local::tab1
tab1.a : 7
