src/fhiclcpp/fhiclcpp/test/testFiles/fail/adv_ref_fail.fcl
BEGIN_PROLOG
a : 5
tab1: { a:1 b:2 }
END_PROLOG
a: 6
tab1.a: 7
tab1.a: @local::tab1.b
